--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -2,37 +2,41 @@ div {
   margin: auto;
   width: 85vw;
   max-width: 550px;
-  background-color: #aea8decc;
-  color: #3a3240;
+  background-color: var(--light-purple);
+  color: var(--dark-purple);
 }
 
-button, a {
-    cursor: url("https://www.nhcarrigan.com/assets/img/pointer.cur"), pointer;
+button,
+a {
+  cursor: var(--cursor-pointer), pointer;
+}
+
+a, a:visited {
+  color: var(--dark-blue);
 }
 
 button {
-    background-color: #3a3240;
-    color: #aea8de;
+  background-color: var(--dark-purple);
+  color: var(--light-blue);
 }
 
 .issues {
-    margin: 10px auto;
-    border-radius: 50px;
-    display: grid;
-    grid-template-columns: 100px auto;
-    align-items: center;
-    padding: 5px;
+  margin: 10px auto;
+  border-radius: 50px;
+  display: grid;
+  grid-template-columns: 100px auto;
+  align-items: center;
+  padding: 5px;
 }
 
-
 .avatar {
-    width: 100px;
-    border-radius: 50%;
+  width: 100px;
+  border-radius: 50%;
 }
 
 .label {
-    border-radius: 50px;
-    display: inline-block;
-    margin: 2px;
-    padding: 2px;
+  border-radius: 50px;
+  display: inline-block;
+  margin: 2px;
+  padding: 2px;
 }
