--- a/src/styles.css
+++ b/src/styles.css
@@ -1,32 +1,32 @@
 /* You can add global styles to this file, and also import other style files */
 :root {
-    --dark-purple: #3a3240;
-    --dark-blue: #0b0080;
-    --light-purple: #aea8de;
-    --light-blue: #48d1cc;
-    --cursor-normal: url("https://www.nhcarrigan.com/assets/img/cursor.cur");
-    --cursor-pointer: url("https://www.nhcarrigan.com/assets/img/pointer.cur");
-  }
-  
-  body {
-    margin: 0;
-    text-align: center;
-    cursor: url("https://www.nhcarrigan.com/assets/img/cursor.cur"), default;
-    font-size: 1.2rem;
-  }
-  
-  body::before {
-    background: url(https://cdn.nhcarrigan.com/banner.png);
-    background-size: cover;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    content: "";
-    position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    opacity: 1;
-    pointer-events: none;
-  }
+  --dark-purple: #3a3240;
+  --dark-blue: #0b0080;
+  --light-purple: #aea8de;
+  --light-blue: #48d1cc;
+  --cursor-normal: url("https://www.nhcarrigan.com/assets/img/cursor.cur");
+  --cursor-pointer: url("https://www.nhcarrigan.com/assets/img/pointer.cur");
+}
+
+body {
+  margin: 0;
+  text-align: center;
+  cursor: var(--cursor-normal), default;
+  font-size: 1.2rem;
+}
+
+body::before {
+  background: url(https://cdn.nhcarrigan.com/banner.png);
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  opacity: 1;
+  pointer-events: none;
+}
