--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -5,6 +5,11 @@
     of our organisations. Feel free to use the buttons below to filter issues
     and see what's available!
   </p>
+  <p>
+    To help you get started, we encourage you to review our
+    <a href="https://docs.nhcarrigan.com">contributing guidelines</a> first.
+    You can also chat with us on our <a href="https://chat.nhcarrigan.com">discord server</a>!
+  </p>
   <p>Choose an organisation:</p>
   <button (click)="filterIssues('nhcarrigan', focusedLabel)">
     Naomi's Repos
