--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -7,8 +7,16 @@
   </p>
   <p>
     To help you get started, we encourage you to review our
-    <a href="https://docs.nhcarrigan.com">contributing guidelines</a> first.
-    You can also chat with us on our <a href="https://chat.nhcarrigan.com">discord server</a>!
+    <a href="https://docs.nhcarrigan.com" target="_blank"
+      >contributing guidelines</a
+    >
+    first. You can also chat with us on our
+    <a
+      href="https://chat.nhcarrigan.com"
+      target="_blank"
+      rel="noopener noreferrer"
+      >support server</a
+    >!
   </p>
   <p>Choose an organisation:</p>
   <button (click)="filterIssues('nhcarrigan', focusedLabel)">
