feat: add links to docs and support server (#17)
* Add links to contribution doc and chat server

* Update src/app/main/main.component.html with helpful links for contributors

Co-authored-by: Naomi Carrigan <nhcarrigan@gmail.com>

Co-authored-by: Naomi Carrigan <nhcarrigan@gmail.com>

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -5,6 +5,19 @@
     of our organisations. Feel free to use the buttons below to filter issues
     and see what's available!
   </p>
+  <p>
+    To help you get started, we encourage you to review our
+    <a href="https://docs.nhcarrigan.com" target="_blank"
+      >contributing guidelines</a
+    >
+    first. You can also chat with us on our
+    <a
+      href="https://chat.nhcarrigan.com"
+      target="_blank"
+      rel="noopener noreferrer"
+      >support server</a
+    >!
+  </p>
   <p>Choose an organisation:</p>
   <button (click)="filterIssues('nhcarrigan', focusedLabel)">
     Naomi's Repos
