feat: label css

--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -41,6 +41,11 @@ button:disabled {
   border-radius: 50%;
 }
 
+.labels {
+  background-color: black;
+  border-radius: 50px;
+}
+
 .label {
   border-radius: 50px;
   display: inline-block;
