--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -145,9 +145,7 @@
         <span
           class="label"
           *ngFor="let label of issue.labels"
-          style="background-color: #{{ label.color }}; color: #{{
-            invert(label.color)
-          }};"
+          style="{{ getColour(label.color) }}"
           >{{ label.name }}</span
         >
       </section>
@@ -169,9 +167,7 @@
         <span
           class="label"
           *ngFor="let label of issue.labels"
-          style="background-color: #{{ label.color }}; color: #{{
-            invert(label.color)
-          }};"
+          style="{{ getColour(label.color) }}"
           >{{ label.name }}</span
         >
       </section>
