chore: update contributing link

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -7,7 +7,7 @@
   </p>
   <p>
     To help you get started, we encourage you to review our
-    <a href="https://docs.nhcarrigan.com" target="_blank"
+    <a href="https://docs.nhcarrigan.com/#/contributing" target="_blank"
       >contributing guidelines</a
     >
     first. You can also chat with us on our
